added a scoring system and UI changes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MCQ Quiz</title>
+    <title>Smart Quiz Platform</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <!-- Navigation Bar -->
     <nav>
         <ul>
@@ -28,6 +27,10 @@
     </nav>
 
     <main>
+        <div id="score-panel">
+            <span id="current-score">Score: 0</span>
+            <span id="questions-remaining"></span>
+        </div>
         <div id="quiz-container">
             <!-- Questions will be displayed here dynamically -->
         </div>
